--- a/project1/css/style.css
+++ b/project1/css/style.css
@@ -273,7 +273,7 @@ p.why {
     float: left;
 }
 
-.row3-col1 span {
+.row3-col1 {
     font-size: 16px;
     font-weight: bold;
     color: #828888;
