--- a/design-final-static/css/style.css
+++ b/design-final-static/css/style.css
@@ -763,7 +763,7 @@ div .contact {
     background: linear-gradient(180deg, rgba(255, 103, 84, 1) 35%, rgba(255, 56, 88, 1) 100%);
     color: white;
     display: block;
-    text-align: center;
+    /* text-align: center; */
 }
 
 ::placeholder {
