--- a/design-final-responsive/css/layout.css
+++ b/design-final-responsive/css/layout.css
@@ -22,46 +22,185 @@
     clear: both;
 }
 
-.icon {
-    padding: 10px;
-    padding-bottom: none;
-    display: none;
-    position: relative;
-    float: right;
-    padding-right: 15px;
-}
-
-.menuicon {
+.menu-icon div {
     width: 30px;
-    height: 2px;
+    height: 4px;
+    background-color: rgb(6, 108, 126);
     margin: 6px 0;
-    background-color: black;
 }
 
-.dropdown-content ul {
+.menu-icon {
+    padding: 0px 5px;
     float: right;
-    list-style: none;
+    border: 1.5px solid rgba(28, 107, 107, 0.623);
     display: none;
+    margin: 35px 20px 25px;
+    position: relative;
+    z-index: 1;
 }
 
+.dropdown ul {
+    list-style: none;
+}
 
-/* .icon .drpbtn:active .dropdown-content {
-    display: block;
-} */
+.dropdown ul li a {
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+    margin: 20px;
+}
 
-@media screen and (max-width: 360px) {
+.dropdown {
+    position: absolute;
+    z-index: 2;
+    top: 75px;
+    right: -380px;
+    float: right;
+    display: none;
+    background: #5de4d9c9;
+    /* padding: 20px; */
+    box-shadow: 0px 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (min-width:1173px) {
     .page {
         width: 100%;
-        min-width: 22.5em;
+    }
+}
+
+@media screen and (max-width:360px) {
+    .page {
+        width: 100%;
+        min-width: 360px;
     }
     .container {
-        width: 22.5em;
-        /* margin: 0 auto; */
+        width: 360px
+    }
+    .logo {
+        padding-left: 10px;
     }
     .menu {
         display: none;
     }
-    .icon {
+    .menu-icon {
         display: block;
+    }
+    .row2 .service ul {
+        padding-top: 40px;
+    }
+    .row2 .service ul li {
+        width: 50%;
+        margin: 0 auto;
+        padding-right: 0;
+    }
+    .row2 .service p {
+        padding-top: 20px;
+        padding-bottom: 30px;
+    }
+    .row3 {
+        display: none;
+    }
+    .row4 {
+        display: none;
+    }
+    .row5 .row5-para p {
+        padding-bottom: 30px;
+    }
+    .row5 nav.service-menu li a {
+        padding-right: 20px;
+        padding-left: 10px;
+    }
+    .row5 nav.service-menu ul {
+        padding-bottom: 15px;
+    }
+    .row5 .service-card ul li:nth-child(n+5) {
+        display: none;
+    }
+    .row5 .service-card {
+        padding-bottom: 10px;
+        overflow: hidden;
+    }
+    .row5 .arrow-down {
+        padding-bottom: 32px;
+    }
+    .row6.container.clearfix {
+        padding-left: 20px;
+    }
+    .row6.container.clearfix ul li {
+        padding-right: 30px;
+        padding-bottom: 5px;
+        padding-top: 50px;
+    }
+    .row6.container.clearfix ul li:nth-child(even) {
+        padding-top: 45.5px;
+    }
+    .row7 .row7-para p {
+        padding-bottom: 32px;
+    }
+    .row7 .team-card {
+        padding-bottom: 0;
+        padding-left: 45px;
+    }
+    .row7 .team-card ul li {
+        padding-bottom: 0;
+        margin-bottom: 16px;
+    }
+    .row7 .team-card ul li:nth-child(n+3) {
+        display: none;
+    }
+    .row10 {
+        display: none;
+    }
+    .row11 {
+        display: none;
+    }
+    .row12 {
+        display: none;
+    }
+    .row14 .map {
+        display: none;
+    }
+    .row14 .address {
+        float: left;
+        margin: 50px 30px 50px 20px;
+        text-align: left;
+        width: 90%;
+    }
+    .footer-text.clearfix {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .row13 .row13-para {
+        display: none;
+    }
+    .row13 .contact input[type=text] {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .row13 #msg {
+        width: 100%;
+    }
+    .row13 button[type=submit] {
+        float: none;
+        margin: 20px auto;
+    }
+    .contactform.clearfix {
+        padding-bottom: 30px;
+    }
+}
+
+@media screen and (min-width:400px) and (max-width:768px) {
+    .page {
+        width: 100%;
+        min-width: 768px;
+    }
+    .container {
+        width: 768px;
+    }
+    .row3-wrapper {
+        display: none;
+    }
+    .row4 {
+        display: none;
     }
 }
